--- a/code/TODO
+++ b/code/TODO
@@ -1,13 +1,23 @@
 not done 👻
 done 🌟 
 
-change heart 👻
+add sharing details 🌟 
+write readme 🌟 
+figure out the weird overflow 🌟
+
+header 👻
+chars count 👻
+
+media query screen 👻
+
+
+change heart🌟
 
 make flexboxes: 
-    commentcontainer with 👻
-    inputcontainer 👻
+    commentcontainer with🌟
+    inputcontainer🌟
     and then a 
-    heart and date container 👻
+    heart and date container 🌟
 
-add font to input label 👻
+add font to input label 🌟
 add font to most text 🌟
