cleaned up code

--- a/code/TODO
+++ b/code/TODO
@@ -8,7 +8,7 @@
 
 # FUNCTIONS
 
-Change color of heart button onClick fungerar? Se netlify?
+Change color of heart ✅
 Complete handleNewThought... ✅
 Complete the hearts button (make it round, add padding)
 Send comment with enter - see Jennies Q & A
