added styling for small phones and desktop + cleaned up and added comments

--- a/code/TODO
+++ b/code/TODO
@@ -21,9 +21,7 @@ Adding boxes around all thoughts ✅
 
 # OTHER
 
-Remove console.log
-Add comment
-Add readme
+Remove console.log ✅
+Add comment ✅
+Add readme ✅
 REDO EVERYTHING
-Catch error function
-https://stackoverflow.com/questions/54114171/how-to-play-an-mp3-once-onclick-in-react?rq=1
